syntax = "proto3";

package pb;

option go_package = "github.com/zarszz/go-grpc/pb";
import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    enum role {
      user = 0;
      admin = 1;
    }
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
  }

  message UserResponse { User user = 1; }
  
  message GenericResponse {
    string status = 1;
    string message = 2;
  }
